@@ -24,6 +24,14 @@ email2trac (1.1.0-4) stable; urgency=low
    Suggested by: dereks at realloc dot net, closes ticket #165
    Fixed by    : Bas van der Vlies
 
+
+ * Added a new parameter strip_content_types. So we can strip attachments 
+   based on content type, eg:
+     * strip_content_types: application/pgp-signature, application/mac-binhex40
+
+   Will strip attachments that has these content_types.
+   Authors:  otto at bergerdata dot de and Bas van der Vlies
+
  -- Bas van der Vlies <bas@sara.nl>  Thu, 22 Oct 2009 17:47:50 +0200
 
 email2trac (1.0.0-1) stable; urgency=low
